[project]
name = "remente-to-md-converter"
version = "0.1.0"
description = ""
authors = [
  { name = "Michael Currin", email = "18750745+MichaelCurrin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["python-frontmatter (>=1.1.0,<2.0.0)", "python-slugify (>=8.0.4,<9.0.0)"]

[project.scripts]
app = "remente2md.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
